--- a/index.html
+++ b/index.html
@@ -1,44 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/3fd457b895.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link type="text/css" rel="stylesheet" href="styles1-0.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="flex-container">
-        <div class="flex-main">
-        <div class="flex-header">
-                <div class="flex-header-logo">
-                    logo
-                </div>
-                <div class="flex-header-blank-space">
-                    blank space
-                </div>
-                <div class="flex-header-menu">
-                    <div class="flex-header-menu-about">
-                        <h5 style="bottom: 0;">about</h5>
-                    </div>
-                    <div class="flex-header-menu-cheapest-places">
-                        <h5 style="bottom: 0;">cheapest places</h5>
-                    </div>
-                </div>
-        </div>
-        <div class="flex-main-content">
-            <div class="flex-main-content-information">
-                    <input class="main-content-city" placeholder="city">
-                    <input class="main-content-destination" placeholder="name">
-            </div>
-        <div class="main-content-date">
-            content
-        </div>
-        </div>
-        
-        </div>
-        <div class="flex-footer">
-        </div>
-    </div>
-    <script src="index.js" type="javscript"></script>
+    <div id="root"></div>
+    <script src="index.js"></script>
 </body>
 </html>
