modified:   components/header.js 	modified:   components/views/Cheapest.js 	modified:   components/views/Contact.js 	modified:   components/views/Home.js 	modified:   components/views/Popular.js 	modified:   index.html 	modified:   index.js 	new file:   ipad.css 	new file:   max1300.css 	new file:   max400.css 	new file:   mobile.css 	modified:   store/Cheapest.js 	modified:   store/index.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link type="text/css" rel="stylesheet" href="styles1-0.css">
+    <link type="text/css" rel="stylesheet" href="max1300.css">
+    <link type="text/css" rel="stylesheet" href="ipad.css">
+    <link type="text/css" rel="stylesheet" href="mobile.css">
+    <link type="text/css" rel="stylesheet" href="max400.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
