--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link type="text/css" rel="stylesheet" href="styles1-0.css">
+    <link type="text/css" rel="stylesheet" href="monitor.css">
+    <link type="text/css" rel="stylesheet" href="laptop.css">
     <link type="text/css" rel="stylesheet" href="max1300.css">
     <link type="text/css" rel="stylesheet" href="ipad.css">
     <link type="text/css" rel="stylesheet" href="mobile.css">
