--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link type="text/css" rel="stylesheet" href="laptop.css">
     <link type="text/css" rel="stylesheet" href="max1300.css">
     <link type="text/css" rel="stylesheet" href="ipad.css">
-    <link type="text/css" rel="stylesheet" href="mobile.css">
-    <link type="text/css" rel="stylesheet" href="max400.css">
+    <link type="text/css" rel="stylesheet" href="iphoneX-375x812.css">
+    <link type="text/css" rel="stylesheet" href="iphone6-7-8-375x667.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
